--- a/style.css
+++ b/style.css
@@ -33,41 +33,34 @@ header h1 {
     text-transform: uppercase;
     /* Letras maiúsculas para dar um toque de seriedade */
 }
-
 nav {
-    background-color: #e0e0e0;
-    /* Cinza claro para a navegação */
-    color: #333;
-    /* Texto mais escuro */
+    display: flex; /* Para usar flexbox e alinhar os itens *
+    flex-direction: row; /* Alinha os itens verticalmente */
+    width: 100%; /* Defina a largura desejada para o seu menu "cardápio" */
     padding: 10px;
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    border-bottom: 1px solid #ccc;
-    /* Borda inferior sutil */
+    border-radius: 8px; /* Bordas arredondadas, se desejar */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); /* Sombra suave */
 }
 
 nav button {
-    background-color: transparent;
-    /* Removendo a cor de fundo */
-    color: #333;
-    /* Mantendo a cor do texto */
-    border: none;
-    /* Removendo a borda, se desejar */
+    display: block; /* Faz com que cada botão ocupe a largura total do pai */
+    width: 100%; /* Garante que o botão ocupe a largura do nav */
     padding: 10px 15px;
-    margin: 5px;
-    cursor: pointer;
+    margin-bottom: 5px; /* Espaço entre os botões */
+    border: none;
+    color: #333;
+    text-align: left; /* Alinha o texto à esquerda */
     border-radius: 5px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 nav button:hover {
-    background-color: #f0f0f0;
-    /* Cor de fundo ao passar o mouse */
-    color: #003366;
-    /* Cor do texto ao passar o mouse */
+    background-color: #ccc;
+}
+
+nav button:last-child {
+    margin-bottom: 0; /* Remove a margem do último botão */
 }
 
 main {
