--- a/style.css
+++ b/style.css
@@ -2,44 +2,34 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5dc;
+    background-color: #ffffff;
     /* Bege claro para um fundo mais neutro */
     color: #333;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    /* Adicionando uma textura sutil (opcional) */
-    /* background-image: url('sua-textura-sutil.png'); */
-    /* background-repeat: repeat; */
-    /* background-size: auto; */
 }
 
 header {
-    background-color: #2c3e50;
-    /* Azul escuro, remetendo a ambientes industriais */
-    color: #f39c12;
-    /* Amarelo, trazendo contraste e força */
-    padding: 20px;
+    background-color: #ffffff; /* Azul escuro, remetendo a ambientes industriais */
+    color: #f39c12; /* Amarelo, trazendo contraste e força */
     text-align: center;
-    font-family: 'Arial', sans-serif;
-    /* Fonte simples e forte */
-    border-bottom: 5px solid #f39c12;
-    /* Linha inferior destacando o cabeçalho */
+    max-width: 1020px;
+    width: 100%;
+    font-family: 'Arial', sans-serif; /* Fonte simples e forte */
+    margin: 0 auto; /* Centraliza o header horizontalmente */
+    padding: 0;
 }
 
-header h1 {
-    font-size: 36px;
-    font-weight: bold;
-    text-transform: uppercase;
-    /* Letras maiúsculas para dar um toque de seriedade */
-}
+
+
 nav {
     display: flex; /* Para usar flexbox e alinhar os itens *
     flex-direction: row; /* Alinha os itens verticalmente */
     width: 100%; /* Defina a largura desejada para o seu menu "cardápio" */
     padding: 10px;
     border-radius: 8px; /* Bordas arredondadas, se desejar */
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    justify-content: space-around;
 }
 
 nav button {
@@ -94,9 +84,7 @@ form {
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #f9f9f9;
     /* Cinza bem claro */
-    border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     /* Sombra um pouco maior */
